syntax = "proto3";

package kvraftpb;

enum Op {
    Unknown = 0;
    Put = 1;
    Append = 2;
}

/// Put or Append
message PutAppendRequest {
    string key = 1;
    string value = 2;
    // "Put" or "Append"
    Op op = 3;
    // You'll have to add definitions here.
    uint64 seq = 4;
    string name = 5;
}

message PutAppendReply {
    bool wrong_leader = 1;
    string err = 2;
}

message GetRequest {
    string key = 1;
    // You'll have to add definitions here.
    uint64 seq = 2;
    string name = 3;
}

message GetReply {
    bool wrong_leader = 1;
    string err = 2;
    string value = 3;
}

// Raft 中复制的日志
message Command {
    // 0 = Get, 1 = Put, 2 = Append
    uint64 op = 1;
    string key = 2;
    string value = 3;
    uint64 seq = 4;
    string name = 5;
}

// server 端保存的 snapshot 信息
message Snapshot {
    repeated string keys = 1;
    repeated string values = 2;
    repeated string client_names = 3;
    repeated uint64 seqs = 4;
}